[package]
name = "orecchiette-sdr-file-rs"
license = "GPL-3.0-or-later"
version = "0.1.0"
edition = "2024"
description = "File-backed SdrSource implementations: raw interleaved IQ and SigMF (Signal Metadata Format) recordings."
repository = "https://github.com/isaacbentley/orecchiette-sdr-file-rs"
readme = "README.md"
keywords = ["sdr", "sigmf", "iq", "rf"]
categories = ["hardware-support", "api-bindings"]

[dependencies]
orecchiette-sdr-source-rs = "0.1.0"
crossbeam = "0.8"
num-complex = "0.4"
anyhow = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
